# taskwarrior-mcp

./: .gitignore  Cargo.toml  Justfile  README.md  claude_desktop_config.json  server.json
.github/workflows/: ci.yml
src/: main.rs
