[package]
name = "task-warrior-mcp"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "task-warrior-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
